--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-wrapper">
-  <h1 class="game-title text-center mt-3">Jogo do Impostor</h1>
+  <h1 class="game-title text-center mt-3">{{ title }}</h1>
 
   <div *ngIf="!isGameStarted" class="app-content">
     <div class="container mb-5">
