--- a/src/app/components/game-logic/game-logic.component.html
+++ b/src/app/components/game-logic/game-logic.component.html
@@ -2,10 +2,12 @@
   class="container-fluid d-flex flex-column justify-content-center align-items-center"
 >
   <div class="card-container text-center">
-    <div class="flip-card" [class.flipped]="show">
+    <div class="flip-card" [class.flipped]="isRevealed">
       <div class="flip-face flip-front shadow-lg p-4">
         <div class="d-flex justify-content-between align-items-center">
-          <strong class="text-light mx-2">{{ players[index] }}</strong>
+          <strong class="text-light mx-2">
+            {{ players[index] }}
+          </strong>
 
           <button class="btn btn-sm btn-outline-light mx-2" (click)="reveal()">
             👁️ Revelar
@@ -18,14 +20,11 @@
         [ngClass]="players[index] === pickedPlayer ? 'impostor' : 'normal'"
       >
         <h6 class="my-0 mx-2">
-          <ng-container
-            class="mx-2"
-            *ngIf="players[index] === pickedPlayer; else theme"
-          >
+          <ng-container *ngIf="players[index] === pickedPlayer; else theme">
             😈 VOCÊ É O IMPOSTOR
           </ng-container>
 
-          <ng-template class="mx-2" #theme> 🎯 {{ pickedTheme }} </ng-template>
+          <ng-template #theme> 🎯 {{ pickedTheme }} </ng-template>
         </h6>
 
         <button class="btn btn-outline-light" (click)="hide()">
@@ -37,35 +36,36 @@
     <div class="mt-4">
       <div class="row justify-content-around">
         <button
-          *ngIf="!done"
+          *ngIf="!isDone"
           class="btn btn-warning col-5"
           (click)="previous()"
-          [disabled]="isFirst"
+          [disabled]="isFirstPlayer"
         >
           Jogador Anterior
         </button>
+
         <button
-          *ngIf="!done"
+          *ngIf="!isDone"
           class="btn btn-primary col-5"
           (click)="next()"
-          [disabled]="show || notRevealedYet"
+          [disabled]="isRevealed"
         >
           Próximo Jogador
         </button>
       </div>
 
-      <button *ngIf="done" class="btn btn-danger w-100" (click)="restart()">
+      <button *ngIf="isDone" class="btn btn-danger w-100" (click)="restart()">
         Reiniciar jogo
       </button>
     </div>
   </div>
 
-  <div class="row justify-content-center mt-4" *ngIf="usedThemesString">
+  <div class="row justify-content-center mt-4" *ngIf="usedThemesLabel">
     <div class="border rounded p-3 bg-light">
       <small class="text-muted d-block mb-2"> Temas já utilizados </small>
 
       <div class="fw-semibold">
-        {{ usedThemesString }}
+        {{ usedThemesLabel }}
       </div>
     </div>
   </div>
