--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div class="app-wrapper">
   <h1 class="game-title text-center mt-3">{{ title }}</h1>
 
+  <div class="d-flex justify-content-center my-1">
+    <img draggable="false" src="assets/spy-agent.png" class="menu-icon" />
+  </div>
+
   <div *ngIf="!isGameStarted" class="app-content">
     <div class="container mb-5">
       <div class="row justify-content-center">
