--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,15 @@ button,
 }
 
 /* ======================================================
+   Icon Menu
+====================================================== */
+
+.menu-icon {
+  max-width: 300px;
+  opacity: 0.95;
+  filter: drop-shadow(0 4px 10px rgba(0,0,0,0.25));
+}
+/* ======================================================
    Tipografia
 ====================================================== */
 
