--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,4 +64,13 @@
   </app-game-logic>
 </div>
 
+<footer class="credits-bar">
+  <span>
+    Icon by
+    <a href="https://www.freepik.com" target="_blank" rel="noopener noreferrer">
+      Freepik
+    </a>
+  </span>
+</footer>
+
 <router-outlet></router-outlet>
