--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
 
 <footer class="credits-bar">
   <span>
-    Icon by
+    Icons by
     <a href="https://www.freepik.com" target="_blank" rel="noopener noreferrer">
       Freepik
     </a>
