--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-wrapper">
   <h1 class="game-title text-center mt-3">{{ title }}</h1>
+  <h2>teste</h2>
 
   <div *ngIf="!isGameStarted" class="d-flex justify-content-center my-1">
     <img draggable="false" src="assets/spy-agent.png" class="menu-icon" />
