--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,6 +9,7 @@
 @use 'components/buttons';
 @use 'components/badges';
 @use 'components/swipe.scss';
+@use 'components/used-themes.scss';
 
 @use 'games/ito';
 @use 'games/impostor.scss'
