--- a/src/app/shared/components/game-controls/game-controls.component.html
+++ b/src/app/shared/components/game-controls/game-controls.component.html
@@ -1,30 +1,4 @@
-<!-- <div class="mt-4">
-  <div class="row justify-content-around">
-    <button
-      *ngIf="!isDone"
-      class="btn btn-warning col-5"
-      (click)="previous.emit()"
-      [disabled]="isFirstPlayer"
-    >
-      Jogador Anterior
-    </button>
-
-    <button
-      *ngIf="!isDone"
-      class="btn btn-primary col-5"
-      (click)="next.emit()"
-      [disabled]="isRevealed"
-    >
-      Próximo Jogador
-    </button>
-  </div>
-
-  <button *ngIf="isDone" class="btn btn-danger w-100" (click)="restart.emit()">
-    Reiniciar jogo
-  </button>
-</div> -->
-
-<div class="controls mt-4">
+<div class="mt-4">
   <small class="progress-label d-block mb-2">
     Jogador {{ index + 1 }} de {{ players.length }}
   </small>
@@ -49,7 +23,7 @@
 
   <button
     *ngIf="isDone"
-    class="btn btn-danger w-100 mt-3"
+    class="btn btn-danger w-50 mt-3"
     (click)="restart.emit()"
   >
     Reiniciar jogo
