--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,5 +11,6 @@
 @use 'components/swipe.scss';
 @use 'components/used-themes.scss';
 
-@use 'games/ito';
-@use 'games/impostor.scss';
+@use 'games/ito/ito.scss';
+@use 'games/ito/ito-ranking.scss';
+@use 'games/impostor/impostor.scss';
