--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -5,6 +5,8 @@ body {
   height: 100%;
   overflow-x: hidden;
   overflow-y: hidden;
+  overscroll-behavior: none;
+  touch-action: manipulation;
 }
 
 body {
