--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -2,8 +2,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   overscroll-behavior: none;
   touch-action: manipulation;
 }
