--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .app-content {
