--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -10,6 +10,7 @@ body {
 
 body {
   color: #f8fafc;
+  background: radial-gradient(circle at top, #6e8caa, #cbd5ff);
   font-family: system-ui, -apple-system, BlinkMacSystemFont;
 }
 
